//
// Created by lucas on 30/08/2024.
//

#ifndef TACTIC_H
#define TACTIC_H

#include "Phoenixpp/ai/stp/Skill.h"

namespace phoenixpp::ai {

    class Tactic {
        Skill skills[10]; // TODO: alterar esse size para ficar dinamico


    };
}

#endif //TACTIC_H
